--- a/VenteApp/Pages/InventoryPage.xaml
+++ b/VenteApp/Pages/InventoryPage.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:VenteApp.Resources.Localization"
@@ -45,12 +44,13 @@
                    BackgroundColor="White">
                 <VerticalStackLayout>
                     <!-- Table Headers -->
-                    <Grid Padding="10" BackgroundColor="#056296" ColumnDefinitions="*,*,*,*,*">
+                    <Grid Padding="10" BackgroundColor="#056296" ColumnDefinitions="*,*,*,*,*,*">
                         <Label TextColor="White" Text="{x:Static local:Strings.NameLabel}" FontAttributes="Bold" Grid.Column="0"/>
                         <Label TextColor="White" Text="{x:Static local:Strings.DescriptionLabel}" FontAttributes="Bold" Grid.Column="1"/>
                         <Label TextColor="White" Text="{x:Static local:Strings.CategoryLabel}" FontAttributes="Bold" Grid.Column="2"/>
                         <Label TextColor="White" Text="{x:Static local:Strings.SizeLabel}" FontAttributes="Bold" Grid.Column="3"/>
                         <Label TextColor="White" Text="{x:Static local:Strings.StockLabel}" FontAttributes="Bold" Grid.Column="4"/>
+                        <Label TextColor="White" Text="{x:Static local:Strings.ExpirationDateLabel}" FontAttributes="Bold" Grid.Column="5"/>
                     </Grid>
 
                     <!-- Product List -->
@@ -60,13 +60,14 @@
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
-                                    <Grid Padding="10" ColumnDefinitions="*,*,*,*,*">
+                                    <Grid Padding="10" ColumnDefinitions="*,*,*,*,*,*">
                                         <!-- Product Data Columns -->
                                         <Label Text="{Binding Nom}" Grid.Column="0" VerticalOptions="Center"/>
                                         <Label Text="{Binding Description}" Grid.Column="1" VerticalOptions="Center"/>
                                         <Label Text="{Binding Categorie}" Grid.Column="2" VerticalOptions="Center"/>
                                         <Label Text="{Binding Taille}" Grid.Column="3" VerticalOptions="Center"/>
                                         <Label Text="{Binding Quantite}" Grid.Column="4" VerticalOptions="Center"/>
+                                        <Label Text="{Binding DateExpiration, StringFormat='{0:dd/MM/yyyy}'}" Grid.Column="5" VerticalOptions="Center"/>
                                     </Grid>
                                 </ViewCell>
                             </DataTemplate>
